Fix error with most voted response not showing.

--- a/sinatra-skeleton-mvc/public/sass/application.scss
+++ b/sinatra-skeleton-mvc/public/sass/application.scss
@@ -185,6 +185,7 @@ label {
 .survey_results {
     @include span-columns(6);
     @include shift(3);
+    padding-bottom: 9em;
 }
 
 .individual_survey_question h2{
